--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
-name = "app"
+name = "mcp-quiz"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP Quiz server"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "fastmcp>=2.13.1",
+    "python-dotenv>=1.2.1",
+    "supabase>=2.24.0",
 ]
